Kubernetes/pod3.yaml
###########################
# @author Elias De Hondt  #
# @since 18/11/2024       #
###########################
# Description: This pod is used to run Spring Backend and SQL proxy.
# Usage: kubectl apply -f pod3.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-backend
  labels:
    app: spring-backend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: spring-backend
  template:
    metadata:
      labels:
        app: spring-backend
    spec:
      containers:
        - name: spring-backend
          image: registry.gitlab.com/kdg-ti/integratieproject-2/2024-2025/teamX/spring-backend:latest # Team number changed by the end user when following the manual
          ports:
            - containerPort: 8081
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
            requests:
              memory: "256Mi"
              cpu: "250m"
        - name: cloud-sql-proxy
          image: gcr.io/cloud-sql-connectors/cloud-sql-proxy:2.14.1
          args:
            - "--private-ip"
            - "--auto-iam-authn"
            - "--structured-logs"
            - "--port=3306"
            - ":us-central1-c:cloud-sql-instance" # ProjectId changed by the end user when following the manual
          securityContext:
            runAsNonRoot: true
          volumeMounts:
            - name: sql-auth-proxy-volume
              mountPath: /secrets/
              readOnly: true
          resources:
            requests:
              memory: "2Gi"
              cpu: "1"
      imagePullSecrets:
        - name: gitlab-registry
      volumes:
        - name: sql-auth-proxy-volume
          secret:
            secretName: sql-auth-proxy
---
apiVersion: v1
kind: Service
metadata:
  name: spring-backend-service
spec:
  selector:
    app: spring-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8081
  type: ClusterIP
---
