Kubernetes/pod5.yaml
###########################
# @author Elias De Hondt  #
# @since 18/11/2024       #
###########################
# Description: This pod is used for ELK stack monitoring.
# Usage: kubectl apply -f pod5.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: elk-stack
spec:
  replicas: 1
  selector:
    matchLabels:
      app: elk-stack
  template:
    metadata:
      labels:
        app: elk-stack
    spec:
      containers:
        - name: elasticsearch
          image: docker.elastic.co/elasticsearch/elasticsearch:8.10.2 # (E) Database
          ports:
            - containerPort: 9200
        - name: logstash
          image: docker.elastic.co/logstash/logstash:8.10.2 # (L) Log processor
          ports:
            - containerPort: 5044
          volumeMounts:
            - name: logstash-config
              mountPath: /usr/share/logstash/pipeline/
              subPath: logstash.conf

        - name: kibana
          image: docker.elastic.co/kibana/kibana:8.10.2 # (K) UI
          ports:
            - containerPort: 5601

      volumes:
        - name: logstash-config
          configMap:
            name: logstash-config
---
apiVersion: v1
kind: Service
metadata:
  name: elk-stack-service
spec:
  selector:
    app: elk-stack
  ports:
    - name: elasticsearch
      port: 9200
      targetPort: 9200
    - name: logstash
      port: 5044
      targetPort: 5044
    - name: kibana
      port: 5601
      targetPort: 5601
