Kubernetes/pod6.yaml
###########################
# @author Elias De Hondt  #
# @since 18/11/2024       #
###########################
# Description: This pod is used for monitoring the health of the kubernetes cluster with the help of the grafana.
# Usage: kubectl apply -f pod6.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: monitoring 
  labels:
    app: monitoring
  namespace: monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: monitoring
  template:
    metadata:
      labels:
        app: monitoring
    spec:
      containers:
      - name: grafana
        image: grafana/grafana:latest
        ports:
        - containerPort: 3000
        volumeMounts:
          - mountPath: /var/lib/grafana
            name: grafana-storage
          - mountPath: /etc/grafana/provisioning/datasources
            name: grafana-datasources
            readOnly: false
      - name: prometheus
        image: prom/prometheus:latest
        ports:
        - containerPort: 9090
        volumeMounts:
          - name: prometheus-server-conf
            mountPath: /etc/prometheus
      volumes:
        - name: grafana-storage
          emptyDir: {}
        - name: grafana-datasources
          configMap:
            defaultMode: 420
            name: grafana-datasources
        - name: prometheus-server-conf
          configMap:
            defaultMode: 420
            name: prometheus-server-conf
---
apiVersion: v1
kind: Service
metadata:
  name: monitoring-service
  labels:
    app: monitoring
  namespace: monitoring
spec:
  selector:
    app: monitoring
  ports:
    - name: grafana
      protocol: TCP
      port: 80 # Port used by the Ingress
      targetPort: 3000 # Grafana runs internally on port 3000
---
