Kubernetes/ingress-multi-domain.yaml
###########################
# @author Elias De Hondt  #
# @since 18/11/2024       #
###########################
# Description: This ingress is used to expose the necessary services.
# Usage:
#         kubectl apply -f https://github.com/cert-manager/cert-manager/releases/latest/download/cert-manager.yaml
#         kubectl apply -f https://raw.githubusercontent.com/kubernetes/ingress-nginx/main/deploy/static/provider/cloud/deploy.yaml
#         kubectl apply -f ingress-multi-domain.yaml
#         kubectl get ingress
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/ssl-redirect: "false" # Redirect HTTP to HTTPS
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - status.teamx.eliasdh.com
      secretName: status-tls
    - hosts:
      - keycloak.teamx.eliasdh.com
      secretName: keycloak-iam-tls
    - hosts:
      - www.teamx.eliasdh.com
      secretName: www-tls
    - hosts:
      - api.teamx.eliasdh.com
      secretName: api-tls
  rules:
    - host: www.teamx.eliasdh.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: react-frontend-service
                port:
                  number: 80
    - host: api.teamx.eliasdh.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: spring-backend-service
                port:
                  number: 80
    - host: status.teamx.eliasdh.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: monitoring-service
                port:
                  number: 80
    - host: keycloak.teamx.eliasdh.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: keycloak-iam-service
                port:
                  number: 80
---
