Kubernetes/ingress-single-domain.yaml
###########################
# @author Elias De Hondt  #
# @since 18/11/2024       #
###########################
# Description: This ingress is used to expose the necessary services.
# Usage:
#         kubectl apply -f https://github.com/cert-manager/cert-manager/releases/latest/download/cert-manager.yaml
#         kubectl apply -f https://raw.githubusercontent.com/kubernetes/ingress-nginx/main/deploy/static/provider/cloud/deploy.yaml
#         kubectl apply -f ingress-single-domain.yaml
#         kubectl get ingress
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/ssl-redirect: "true" # Redirect HTTP to HTTPS
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - teamx.kdg.eliasdh.com
      secretName: teamx-tls
  rules:
    - host: teamx.kdg.eliasdh.com
      http:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: react-frontend-service
            port:
              number: 80
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: spring-backend-service
            port:
              number: 80
        paths:
          - path: /status
            pathType: Prefix
            backend:
              service:
                name: monitoring-service
                port:
                  number: 80
          - path: /keycloak
            pathType: Prefix
            backend:
              service:
                name: keycloak-iam-service
                port:
                  number: 80
---
