Kubernetes/ingress.yaml
###y########################
# @author Elias De Hondt  #
# @since 18/11/2024       #
###########################
# Description: This ingress is used to expose the necessary services.
# Usage:
#         kubectl apply -f https://github.com/cert-manager/cert-manager/releases/latest/download/cert-manager.yaml
#         kubectl apply -f https://raw.githubusercontent.com/kubernetes/ingress-nginx/main/deploy/static/provider/cloud/deploy.yaml
#         kubectl apply -f ingress.yaml
#         kubectl get ingress
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/ssl-redirect: "false" # Redirect HTTP to HTTPS
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - status.kdg-ip2.eliasdh.com
      secretName: grafana-tls
  # - hosts: # This configuration is moved to an external repository: https://github.com/EliasDeHondt/elk-filebeat
  #   - elk.kdg-ip2.eliasdh.com
  #   secretName: elk-stack-tls
    - hosts:
      - keycloak.kdg-ip2.eliasdh.com
      secretName: keycloak-iam-tls
    - hosts:
      - www.kdg-ip2.eliasdh.com
      secretName: react-frontend-tls
    - hosts:
      - api.kdg-ip2.eliasdh.com
      secretName: spring-backend-tls
  rules:
    - host: status.kdg-ip2.eliasdh.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: monitoring-service
                port:
                  number: 80
  # - host: elk.kdg-ip2.eliasdh.com # This configuration is moved to an external repository: https://github.com/EliasDeHondt/elk-filebeat
  #   http:
  #     paths:
  #     - path: /
  #       pathType: Prefix
  #       backend:
  #         service:
  #           name: kibana-service
  #           port:
  #             number: 5601
    - host: keycloak.kdg-ip2.eliasdh.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: keycloak-iam-service
                port:
                  number: 80
    - host: www.kdg-ip2.eliasdh.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: react-frontend-service
                port:
                  number: 80
    - host: api.kdg-ip2.eliasdh.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: spring-backend-service
                port:
                  number: 80
---
